--- a/pyconcz/static_src/scss/pyconcz19/_layout.scss
+++ b/pyconcz/static_src/scss/pyconcz19/_layout.scss
@@ -9,6 +9,8 @@ html, body {
     color: $black;
     font-size: 1.5em;
     text-align: center;
+    width: 100%;
+    overflow: hidden;
 }
 .pc-main-header-text {
     display: inline-block;
